tests/rosetta/out/Java/abelian-sandpile-model.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/abelian-sandpile-model.mochi:24:13: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/abelian-sandpile-model.mochi:24:13

 24 |       pile[y-1][x] = pile[y-1][x] + 1
    |             ^

help:
  Parse error occurred. Check syntax near this location.